--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -7,30 +7,189 @@ html, body {
   padding: 0;
   font-size: 18px;
   font-family: 'Arial';
+}
 
-  &:fullscreen {
-    background-color: yellow;
+$loadingHearthColor: #ff4f6a;
+
+article {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+  padding: 30px;
+  &.show {
+    display: flex;
   }
 }
 
-#welcome-screen {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
+#loading {
+  background-color: #fff;
+  z-index: 9999;
+
+  //Loading animation
+  .lds-heart {
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 64px;
+    transform: rotate(45deg);
+    transform-origin: 32px 32px;
+  }
+  .lds-heart div {
+    top: 23px;
+    left: 19px;
+    position: absolute;
+    width: 26px;
+    height: 26px;
+    background: $loadingHearthColor;
+    animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  .lds-heart div:after,
+  .lds-heart div:before {
+    content: " ";
+    position: absolute;
+    display: block;
+    width: 26px;
+    height: 26px;
+    background: $loadingHearthColor;
+  }
+  .lds-heart div:before {
+    left: -17px;
+    border-radius: 50% 0 0 50%;
+  }
+  .lds-heart div:after {
+    top: -17px;
+    border-radius: 50% 50% 0 0;
+  }
+  @keyframes lds-heart {
+    0% {
+      transform: scale(0.95);
+    }
+    5% {
+      transform: scale(1.1);
+    }
+    39% {
+      transform: scale(0.85);
+    }
+    45% {
+      transform: scale(1);
+    }
+    60% {
+      transform: scale(0.95);
+    }
+    100% {
+      transform: scale(0.9);
+    }
+  }
+
+
+}
+
+#fullscreen {
+  display: none;
+  background-color: #fff;
+  z-index: 500;
+  button {
+    width: 50vw;
+    height: 50vw;
+    background-color: #ff4f6a;
+    font-size: 22px;
+    text-transform: uppercase;
+    line-height: 40px;
+    animation: 1s ease 0s infinite alternate scaled;
+    &.soft_hide {
+      animation: 1s ease soft_hide forwards;
+    }
+  }
+  &.show{
+    display: flex;
+  }
+}
+
+#pyro {
+  z-index: 1000;
+  display: none;
+  &.show {
+    display: block;
+  }
+  .pyro > .before, .pyro > .after {
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    box-shadow: -120px -218.66667px blue, 248px -16.66667px #00ff84, 190px 16.33333px #002bff, -113px -308.66667px #ff009d, -109px -287.66667px #ffb300, -50px -313.66667px #ff006e, 226px -31.66667px #ff4000, 180px -351.66667px #ff00d0, -12px -338.66667px #00f6ff, 220px -388.66667px #99ff00, -69px -27.66667px #ff0400, -111px -339.66667px #6200ff, 155px -237.66667px #00ddff, -152px -380.66667px #00ffd0, -50px -37.66667px #00ffdd, -95px -175.66667px #a6ff00, -88px 10.33333px #0d00ff, 112px -309.66667px #005eff, 69px -415.66667px #ff00a6, 168px -100.66667px #ff004c, -244px 24.33333px #ff6600, 97px -325.66667px #ff0066, -211px -182.66667px #00ffa2, 236px -126.66667px #b700ff, 140px -196.66667px #9000ff, 125px -175.66667px #00bbff, 118px -381.66667px #ff002f, 144px -111.66667px #ffae00, 36px -78.66667px #f600ff, -63px -196.66667px #c800ff, -218px -227.66667px #d4ff00, -134px -377.66667px #ea00ff, -36px -412.66667px #ff00d4, 209px -106.66667px #00fff2, 91px -278.66667px #000dff, -22px -191.66667px #9dff00, 139px -392.66667px #a6ff00, 56px -2.66667px #0099ff, -156px -276.66667px #ea00ff, -163px -233.66667px #00fffb, -238px -346.66667px #00ff73, 62px -363.66667px #0088ff, 244px -170.66667px #0062ff, 224px -142.66667px #b300ff, 141px -208.66667px #9000ff, 211px -285.66667px #ff6600, 181px -128.66667px #1e00ff, 90px -123.66667px #c800ff, 189px 70.33333px #00ffc8, -18px -383.66667px #00ff33, 100px -6.66667px #ff008c;
+    -moz-animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+    -webkit-animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+    -o-animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+    -ms-animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+    animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards; }
+  .pyro > .after {
+    -moz-animation-delay: 1.25s, 1.25s, 1.25s;
+    -webkit-animation-delay: 1.25s, 1.25s, 1.25s;
+    -o-animation-delay: 1.25s, 1.25s, 1.25s;
+    -ms-animation-delay: 1.25s, 1.25s, 1.25s;
+    animation-delay: 1.25s, 1.25s, 1.25s;
+    -moz-animation-duration: 1.25s, 1.25s, 6.25s;
+    -webkit-animation-duration: 1.25s, 1.25s, 6.25s;
+    -o-animation-duration: 1.25s, 1.25s, 6.25s;
+    -ms-animation-duration: 1.25s, 1.25s, 6.25s;
+    animation-duration: 1.25s, 1.25s, 6.25s; }
+  @keyframes bang {
+    from {
+      box-shadow: 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white; } }
+  @keyframes gravity {
+    to {
+      transform: translateY(200px);
+      -moz-transform: translateY(200px);
+      -webkit-transform: translateY(200px);
+      -o-transform: translateY(200px);
+      -ms-transform: translateY(200px);
+      opacity: 0; } }
+  @keyframes position {
+    0%, 19.9% {
+      margin-top: 10%;
+      margin-left: 40%; }
+
+    20%, 39.9% {
+      margin-top: 40%;
+      margin-left: 30%; }
+
+    40%, 59.9% {
+      margin-top: 20%;
+      margin-left: 70%; }
+
+    60%, 79.9% {
+      margin-top: 30%;
+      margin-left: 20%; }
+
+    80%, 99.9% {
+      margin-top: 30%;
+      margin-left: 80%; } }
+}
+
+#welcome {
   z-index: 300;
   background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 30px;
-  flex-direction: column;
   transform: translateX(-100%) translateY(-100%) rotate(360deg);
   transition: all ease 1s;
 
+  p {
+    text-align: center;
+  }
+
   img {
     width: 50%;
-    &.animated {
-      animation: 1s ease 0s infinite alternate gift;
+    display: none;
+    &.show {
+      display: block;
+      animation: 1s ease gift forwards;
     }
   }
 
@@ -43,6 +202,17 @@ html, body {
   }
 
 }
+
+#quest {
+  button#answer-btn {
+
+  }
+  button#hint-btn {
+    margin-top: 10px;
+  }
+}
+
+
 
 #timer {
   position: absolute;
@@ -57,16 +227,7 @@ html, body {
   }
 }
 
-#message {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+#success-message {
   background-color: #fff;
   z-index: 200;
   transform: translateX(0) translateY(-200%);
@@ -75,21 +236,22 @@ html, body {
   &.show {
     transform: translateX(0) translateY(0);
   }
-  button#message-ok {
+  p#text-success-message {
+
+  }
+  button#next-quest-btn {
+    margin-top: 30px;
     opacity: 1;
   }
 }
 
 #hint {
-  position: absolute;
-  background-color: #fff;
-  width: 100vw;
-  height: 100vh;
   z-index: 150;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   display: none;
+  background-color: #fff;
+  &.show {
+    display: flex;
+  }
 }
 
 #player {
@@ -129,52 +291,20 @@ html, body {
 
 }
 
-#fullscreen {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-  z-index: 500;
-  button {
-    width: 50vw;
-    height: 50vw;
-    background-color: #ff4f6a;
-    font-size: 22px;
-    text-transform: uppercase;
-    line-height: 40px;
-    animation: 1s ease 0s infinite alternate scaled;
-    &.soft_hide {
-      animation: 1s ease soft_hide forwards;
-    }
-  }
-  &.show{
-    display: flex;
-  }
-}
+
 
 button {
   font-size: 18px;
   width: 100%;
   height: 50px;
   border: none;
-  transition: opacity ease 0.8s;
+  opacity: 0;
+  transition: opacity ease .3s;
   &:focus {
     outline: none;
-    background-color: yellowgreen;
   }
   &.show {
     opacity: 1;
-  }
-  &#answer-btn {
-    //opacity: 0;
-  }
-  &#hint-btn {
-    //opacity: 0;
   }
 }
 
@@ -185,41 +315,28 @@ input {
   height: 60px;
   padding: 0 10px;
   margin-bottom: 20px;
-  border: none;
   text-align: center;
+  border: 2px solid grey;
+  border-radius: 10px;
+  opacity: 0;
+  transition: opacity ease .3s;
   &:focus {
     outline: none;
-    background-color: grey;
+    border-color: #ffbc00;
   }
-}
-
-article {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: greenyellow;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
-
-  #text {
-    font-size: 22px;
-    text-align: center;
+  &.show {
+    opacity: 1;
   }
-
-
-
+  &.wrong {
+    animation: wrong_input .5s 3;
+  }
 }
 
 
 // Animation
 @keyframes gift {
   from {
-    transform: scale(1.4) translateY(20%);
+    transform: scale(0.01);
   }
   to {
     transform: scale(1);
@@ -241,5 +358,14 @@ article {
   }
   to {
     transform: scale(0.8);
+  }
+}
+
+@keyframes wrong_input {
+  from {
+    border-color: #ffbc00;
+  }
+  to {
+    border-color: #ff4f6a;
   }
 }
