--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -251,6 +251,16 @@ article {
   background-color: #fff;
   p {
     text-align: center;
+    margin-bottom: .5em;
+    &.title {
+      font-weight: bold;
+      margin-bottom: 2em;
+      font-size: 30px;
+      text-transform: uppercase;
+    }
+    span {
+      font-weight: bold;
+    }
   }
 }
 
@@ -424,7 +434,7 @@ input {
   border: 2px solid grey;
   border-radius: 10px;
   opacity: 0;
-  transition: opacity ease .3s;
+  transition: all ease .3s;
   &:focus {
     outline: none;
     border-color: #ffbc00;
